--- a/FE-based_solution/Readme
+++ b/FE-based_solution/Readme
@@ -2,3 +2,4 @@ This folder is for our FE-based spam filtering approach.
 
 The trained spam classification model weights and bias are converted to integers and used for prediction.
 
+The functional encryption scheme used in our implementation is proposed in 
