--- a/trec07_dataset_processed/readme
+++ b/trec07_dataset_processed/readme
@@ -1,1 +1,9 @@
+## Download spam email Dataset
+
 You have to download the original trec07 dataset from https://plg.uwaterloo.ca/∼gvcormac/treccorpus07/
+
+## Pre-processing dataset
+
+Using dataclean.py to preprocess raw emails
+
+
